# gbtestc

./: .replit  CMakeLists.txt  compile_commands.json  getdeps.sh  replit.nix
include/: cpu.h  instructionset.h
src/: main.c
work/libX11-1.8.7/: Makefile  config.status  libtool  x11-xcb.pc  x11.pc
work/libXau-1.0.11/: AuDispose.lo  AuFileName.lo  AuGetAddr.lo  AuGetBest.lo  AuLock.lo  AuRead.lo  AuUnlock.lo  AuWrite.lo  Makefile  config.h  config.status  libXau.la  libtool  xau.pc
work/libXcursor-1.2.2/: Makefile  config.h  config.status  libtool  xcursor.pc
work/libXext-1.3.6/: Makefile  config.h  config.status  libtool  xext.pc
work/libXfixes-6.0.1/: Makefile  config.h  config.status  libtool  xfixes.pc
work/libXrandr-1.5.4/: Makefile  config.h  config.status  libtool  xrandr.pc
work/libXrender-0.9.11/: Makefile  config.h  config.status  libtool  xrender.pc
work/libxcb-1.16/: Makefile  aclocal.m4  config.status  libtool  xcb-composite.pc  xcb-damage.pc  xcb-dbe.pc  xcb-dpms.pc  xcb-dri2.pc  xcb-dri3.pc  xcb-ge.pc  xcb-glx.pc  xcb-present.pc  xcb-randr.pc  xcb-record.pc  xcb-render.pc  xcb-res.pc  xcb-screensaver.pc  xcb-shape.pc  xcb-shm.pc  xcb-sync.pc  xcb-xevie.pc  xcb-xf86dri.pc  xcb-xfixes.pc  xcb-xinerama.pc  xcb-xinput.pc  xcb-xkb.pc  xcb-xprint.pc  xcb-xselinux.pc  xcb-xtest.pc  xcb-xv.pc  xcb-xvmc.pc  xcb.pc
work/xcb-proto-1.16.0/: Makefile  config.status  configure  xcb-proto.pc
work/xorgproto-2023.2/: Makefile  applewmproto.pc  bigreqsproto.pc  compositeproto.pc  config.status  damageproto.pc  dmxproto.pc  dpmsproto.pc  dri2proto.pc  (+32 more)
(+1926 files in other folders)
